# swipr

./: .gitignore  CMakeLists.txt  README.md  swipr.cpp
core/: data.cpp  data.h  debug.h  keycodes.h  menu.cpp  menu.h  roi.h
preprocessing/: calibrate.cpp  calibrate.h  keycodes.h  roi.cpp  roi.h  sequence.cpp  sequence.h
tests/: calibrate_test.cpp  sequence_test.cpp
utils/: debug.h  file.h  roi.h
